# Latte

./: .gitignore  Makefile  Readme.md  latc.cabal
lib/: runtime.c
src/: AbsLatte.hs  Compiler.hs  DocLatte.txt  DocLatte.txt.bak  LexLatte.hs  LexLatte.x  Main.hs  ParLatte.hs  ParLatte.y  PrintLatte.hs  SkelLatte.hs  TypeChecker.hs  latte.cf
