name:                latc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/latc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable latc_x86
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array >=0.5.1.0
                     , containers >=0.5.6.2
                     , mtl >=2.1.1
                     , filepath >= 1.4.0.0
                     , process >= 1.2.3.0
